# gobonline

./: .bazelrc  .clang-tidy  .gitignore  BUILD  MODULE.bazel  README.md
.github/workflows/: clang-checks.yaml  clang.yaml  presubmit.yaml  test.yaml
arduino/LaserPointer/: platformio.ini
arduino/LaserPointer/src/: main.cpp
parts/: stepper_motor_adapter.stl
src/: BUILD  arduino_controller.cc  arduino_controller.h  arduino_controller_main.cc  board_state.proto  constants.h  cv_macros.h  goban_cv.cc  goban_cv.h  goban_cv_test.cc  laser_calibration_solver.cc  laser_calibration_solver.h  laser_calibration_solver_test.cc  serial_port.cc  serial_port.h  serial_port_main.cc
src/hello_world/: BUILD  hello_world.cc  hello_world_test.cc
src/opencv_build/: BUILD  opencv_build_test.cc
src/sanity_checks/: README.md
src/sanity_checks/hello_world/: hello_world_test.cc
src/sanity_checks/opencv_build/: BUILD  opencv_build_test.cc
src/testdata/: BUILD  test_image.proto  test_images.textproto
src/util/: BUILD  macro_utils.h  status.h  status_test_utils.h  union_find.cc  union_find.h  union_find_test.cc
src/util/simanneal/: BUILD  simanneal.h  simanneal_test.cc
