"Module for interfacing a physical Goban with online Go servers."

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "cd047b3c64fd4574642535a7108d5d998eefa923",
    # Clayton's version handles protobuf compilation.
    remote = "https://github.com/ClaytonKnittel/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
bazel_dep(name = "abseil-cpp", version = "20240116.2")
bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "glog", version = "0.7.1", repo_name = "com_github_google_glog")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "protobuf", version = "28.2")
bazel_dep(name = "re2", version = "2024-07-02")
bazel_dep(name = "rules_python", version = "0.36.0")

bazel_dep(name = "opencv-bazel")
git_override(
    module_name = "opencv-bazel",
    commit = "3b7e0f50a71b8089b9c20c279c5299e9af812973",
    remote = "https://github.com/jtstogel/opencv-bazel.git",
)
